fix(addOrder layout): moved Amount last for stretching, also made member email to stretch and pin button to the right of the form

--- a/styles/editorder.css
+++ b/styles/editorder.css
@@ -17,7 +17,6 @@
   background-color: hsla(0, 0%, 0%, 0);
   color: var(--clr-white);
   padding: 12px 16px;
-  margin: 4px 8px;
   box-sizing: border-box;
   width: 200px;
   height: 43px;
